--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam:wght@300;400;600;700&display=swap');
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.fs-18{font-size:18px;}
+.cal-month-view .cal-day-cell {
+    min-height: 30px;
+}
+.cal-month-view .cal-cell-top {
+    min-height: 30px;
+    flex: 1;
+}
+.sb-modern-dark, .sb-modern-light .sb-wrapper {
+    --sb-border-radius: 3px;
+    --sb-transition: box-shadow ease-in 150ms, transform ease-in 150ms;
+    --sb-box-shadow: 0 0.1em 0.5em rgba(165, 165, 165, 0.6);
+}
+.sb-modern-dark, .sb-modern-light .sb-wrapper:active {
+      --sb-box-shadow: 0 0.4em 1em rgba(165, 165, 165, 0.9);
+}
+.sb-icon {
+      min-width: 2em;
+ }
+.sb-show-text {padding: 0;}
+.sb-icon { box-shadow: 1px 0 1px -1px rgba(0, 0, 0, 0.3);}
+.sb-modern-dark .sb-wrapper {
+  --sb-color: #fff;
+  --sb-background: var(--button-color);
+}
+.sb-text,
+  .sb-count {
+    background: rgba(0, 0, 0, .1);
+  }
+.sb-show-text
+    .sb-text {
+      border-bottom-right-radius: 3px;
+      border-top-right-radius: 3px;
+    }
+
+.sb-modern-light .sb-wrapper {
+  --sb-color: var(--button-color);
+  --sb-background: #fff;
+}
+.card-text img{
+    max-width:fit-content;
+    width:100%;
+    overflow: hidden;
+}
